<resources>
    <string name="app_name">pikNdel</string>
    <string name="facebook_app_id">1837507036490291</string>
    <string name="instructions_for_rider">Instructions for Rider</string>
    <string name="add_favourite_location">Add Favourite Location</string>
    <string name="skip">SKIP</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="login1">Login1</string>
    <string name="txt_youremail_signup">And your email ID is...\n(We solemnly swear, we won\'t spam it! )</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_confirmpass">Re-enter Password</string>
    <string name="txt_yourpass_signup">Please enter a password too\n(It will be safely kept under lock and key)</string>
    <string name="txt_number_signup">Hey (name), where can we contact you?</string>
    <string name="txt_four_signup">Sorry for asking so many details. Just one last thing...\nWhich plan would you like to subscribe to?</string>
    <string name="free_plan">Free Plan</string>
    <string name="plan_a">Plan A</string>
    <string name="plan_b">Plan B</string>
    <string name="txt_name_signup">Hello, What\'s your name?</string>
    <string name="planyousubscribe">Which plan would you like to subscribe to?</string>
    <string name="email_mobile">Email/Mobile No.</string>
    <string name="password">Password</string>
    <string name="pick_up">Pick-up</string>
    <string name="instruction_to_rider">Instruction to Rider</string>
    <string name="delivery">Delivery</string>
    <string name="express_check">Express Check Out</string>
    <string name="click_picture">Click A Picture</string>
    <string name="enter_email_id">*Please enter email / mobile no.</string>
    <string name="enter_valid_email_id">*Please enter valid email id.</string>
    <string name="enter_valid_number">*Please enter valid mobile no.</string>
    <string name="enter_password">*Please enter password. </string>
    <string name="enter_valid_password">*Password must be at least 4 characters.</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="forget">Forgot Password?</string>
    <string name="google">Google</string>
    <string name="pending">Pending</string>
    <string name="ref">Ref:</string>
    <string name="pick_up_from">Pick-up from</string>
    <string name="completed">Completed</string>
    <string name="Delivery_to">Deliver to</string>
    <string name="favourites">Favourites</string>
    <string name="single_location">Single Location</string>
    <string name="oops_disabled">Oops!Your mobile data is disabled.</string>
    <string name="go_online">Go online or just</string>
    <string name="book_order">call us to book your order.</string>
    <string name="multiple_location">Multiple Location</string>
    <string name="delivery_info">Delivery</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="sbi">SBI</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_number">Account Number</string>
    <string name="account_holder">Account Holder Name</string>
    <string name="search_by_postal_code">Search by postal code or local.</string>
    <string name="enter_multiple_location">Enter no. of multiple location</string>
    <string name="inter_city_delivery">Inter-city Delivery</string>
    <string name="work_in_progress">Work in progress.</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="about_us">About Us</string>
    <string name="Search_Order">Search Order</string>
    <string name="book_executive">Book Executive</string>
    <string name="change_plan"><u>Change Plan</u></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_type">Account Type</string>
    <string name="delivery_by">Delivery by:</string>
    <string name="date_pattern">4PM,19th March-2016</string>
    <string name="text_expand">Lorem ispum sit amet dollar lorem ispum sit amet dollar lorem ispum sit amet dollar lorem ispum sit amet dollar.Lorem Ipsum has been the industrys stands dummy text even since the 1500.</string>
    <string name="loremipsumtext">Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.</string>
    <string name="loremipsumtextb">Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500.Lorem Ipsum has been the industrys stands dummy text even since the 1500</string>
    <string name="enterotp">Enter OTP to reset password</string>
    <string name="resendotp"><u>Resend OTP</u></string>
    <string name="workin_Progress">Work in progress</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="enterotpsend">Please enter the OTP sent to your\n registered mobile number</string>
    <string name="get_invoice">Get Invoice</string>
    <string name="trip_no">Trip No.-000065443311667</string>
    <string name="date_time">Mar 15 2016 16:03:13</string>
    <string name="total_price">Rs 14.40</string>
    <string name="pick_upfrom">Pick-up from</string>
    <string name="pick_name">Mobiloitte Pvt ltd</string>
    <string name="pick_address">A-235, okhla phase 1,\nOkhla Industrial Area, New Delhi</string>
    <string name="deliver_to">Deliver to</string>
    <string name="deliver_name">Harper textile</string>
    <string name="deliver_address">A-234, okhla phase 1,\nOkhla Industrial Area, New Delhi</string>
    <string name="package_type">Package type</string>
    <string name="document_up">Document(Up to 35 x  27 cm)</string>
    <string name="up_to_kg">up to 1 kg</string>
    <string name="invite_sms">Invite via SMS</string>
    <string name="invite_email">Invite via Email</string>
    <string name="invite_facebook">Facebook Messenger</string>
    <string name="invite_whatsapp">Whatsapp Messenger</string>
    <string name="take_a_photo">Take a Snap</string>
    <string name="take_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="sure_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sign_up">Sign-Up</string>
    <string name="estimated_trip_distance">Estimated trip distance</string>
    <string name="total_cost">Total Cost</string>
    <string name="promo_code">Enter Promo Code</string>
    <string name="apply">Apply</string>
    <string name="pay_service_charge">Pay service charges through:</string>
    <string name="term_conditions"><u>Terms &amp; Conditions.</u></string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="enter_valid_location">*Please enter current location</string>
    <string name="enter_valid_mobile">*Please enter valid mobile no.</string>
    <string name="enter_holder_name">*Please enter account holder name</string>
    <string name="enter_account_number">*Please enter account number</string>
    <string name="enter_bank_name">*Please enter bank name</string>
    <string name="enter_ifsc_code">*Please enter IFSC code.</string>
    <string name="choose_account_type">*Please choose account type</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="cancellation_refund"><![CDATA[Cancellation & Refund]]></string>
    <string name="check_terms_conditions">*Please check <![CDATA[Terms & Conditions]]>.</string>
    <string name="in_case_the_volumetric_weight_of_npackage_is_higher_nthe_charges_may_increase">
        In case the volumetric weight of the package is higher than the actual weight, the charges may increase.</string>
    <string name="calculate_volumetric_weight"><u>Calculate volumetric weight</u></string>
    <string name="payment_history"><u>Payment History</u></string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="saved_card">Saved Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_type">Card Type</string>
    <string name="debit_card">Debit Card</string>
    <string name="name_on_card">Name on Card</string>
    <string name="valid_upto">Valid Upto</string>
    <string name="add_money">Add Money</string>
    <string name="add_new_card">Add New Card</string>
    <string name="balance">Balance</string>
    <string name="forgot_pass"><![CDATA[Forgot your password?\nPlease enter your registered phone\nnumber & we will send you an OTP!]]></string>
    <string name="thank_you">Thank You!</string>
    <string name="order_detail">Order Detail</string>
    <string name="pls_wait">Please wait...</string>
    <string name="server_not_responding">Server not responding. Try again later.</string>
</resources>