<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg1"
    android:orientation="vertical">


    <include
        layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <TextView
                android:id="@+id/tvLoginWithFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_facebook"
                android:background="@mipmap/fb"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:src="@mipmap/or"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/etUserName"
                    android:layout_marginTop="@dimen/dp_35"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/rounded_bg_edittext"
                    android:drawableLeft="@mipmap/icon1"
                    android:hint="@string/email_mobile"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColorHint="@color/lightwhite"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:padding="@dimen/dp_12"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:maxLength="30"
                    android:drawablePadding="@dimen/dp_10"/>
                <TextView
                    android:id="@+id/tvErrorEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="*Please enter password."
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:textColor="@color/red"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/rounded_bg_edittext"
                    android:drawableLeft="@mipmap/icon2"
                    android:hint="@string/password"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:fontFamily="sans"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/dp_10"
                    android:imeOptions="actionDone"
                    android:textColor="@color/white"
                    android:padding="@dimen/dp_12"
                    android:textColorHint="@color/lightwhite"
                    android:drawablePadding="@dimen/dp_10"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvErrorPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Please enter password."
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:textColor="@color/red"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/rounded_corner_drawable"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_12"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
